--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,11 @@
         <relativePath/>
     </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>springbootfirst</artifactId>
+    <name>Spring Boot Student Academic Record</name>
+    <description>Spring Boot project for managing student academic records</description>
+
+    <groupId>com.student.record</groupId>
+    <artifactId>studentAcademicRecord</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
